--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "mDeepFRI"
 version = "1.1.8"
 description = "Pipeline for searching and aligning contact maps for proteins, and function prediction with DeepFRI."
 readme = { file = "README.md", content-type = "text/markdown" }
-license = { file = "LICENSE.md" }
+license = { file = "LICENSE" }
 authors = [
     { name = "Valentyn Bezshapkin", email = "valentyn.bezshapkin@micro.biol.ethz.ch" }
 ]
@@ -24,7 +24,7 @@ classifiers = [
 dependencies = [
     "click ~=8.0",
     "numpy ~=2.3",
-    "biotite",
+    "biotite >=1.3",
     "pysam >=0.18",
     "pyopal ~=0.5",
     "foldcomp",
